# MacBroom

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh.md  RELEASING.md  SECURITY.md  pyproject.toml  run.sh  待办.md  整体规划.md  更新日志.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
macbroom/: __init__.py  __main__.py  cli.py  desktop.py  doctor.py
macbroom/core/: __init__.py  audit.py  fsutil.py  i18n.py  model.py  server.py  trash.py
macbroom/scanners/: __init__.py  app_leftovers.py  appindex.py  caches.py  duplicates.py  ios_dev.py  large_files.py  login_items.py  system_extras.py
macbroom/web/: app.js  index.html  style.css
packaging/macos/: MacBroom.icns  RELEASING-macos.md  build.sh  bundle_dylibs.py  entitlements.plist  macbroom_app.py  make_icns.py  setup_app.py  signing.local.env.example
tests/: test_i18n.py
