[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "macbroom"
version = "1.1.0"
description = "Open-source macOS cleaner — free up disk space safely with a local web UI. Caches, app leftovers, large & duplicate files, dev junk."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "MacBroom contributors" }]
keywords = [
    "macos", "open-source", "mac-cleaner", "macos-cleaner",
    "cleanmymac-alternative", "cleanmymac", "appcleaner", "pearcleaner",
    "disk-cleanup", "disk-space", "cache-cleaner", "duplicate-finder",
    "cleanup", "uninstaller", "developer-tools", "xcode-cleaner",
    "homebrew", "privacy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
# 仅依赖 Python 3 标准库，运行时无任何第三方依赖。
dependencies = []

[project.urls]
Homepage = "https://github.com/mythkiven/MacBroom"
Repository = "https://github.com/mythkiven/MacBroom"
Issues = "https://github.com/mythkiven/MacBroom/issues"

[project.scripts]
macbroom = "macbroom.cli:main"

[tool.setuptools.packages.find]
include = ["macbroom*"]

[tool.setuptools.package-data]
macbroom = ["web/*.html", "web/*.css", "web/*.js"]
